test/errors/nullability/nullable_assignment_fail.hy
string? maybeText = null

// This should fail because maybeText is nullable
string definiteText = maybeText
